--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/mongoose": "^5.5.11",
     "express": "^4.16.2",
     "http-errors": "^1.7.1",
+    "mongoose": "^5.6.8",
     "morgan": "^1.9.1",
     "pug": "^2.0.0-rc.4",
     "tsc-watch": "^2.2.1"
