--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@types/mongoose": "^5.5.11",
     "express": "^4.16.2",
     "http-errors": "^1.7.1",
+    "i": "^0.3.6",
     "mongoose": "^5.6.8",
     "morgan": "^1.9.1",
+    "npm": "^6.10.2",
     "pug": "^2.0.0-rc.4",
     "tsc-watch": "^2.2.1"
   },
