--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/mongoose": "^5.5.11",
+    "body-parser": "^1.19.0",
     "express": "^4.16.2",
     "http-errors": "^1.7.1",
     "i": "^0.3.6",
