--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "@types/mongoose": "^5.5.11",
     "body-parser": "^1.19.0",
+    "class-validator": "^0.9.1",
+    "email-validator": "^2.0.4",
     "express": "^4.16.2",
     "http-errors": "^1.7.1",
     "i": "^0.3.6",
@@ -38,6 +40,7 @@
     "concurrently": "^3.5.1",
     "nodemon": "^1.19.1",
     "tslint": "^5.9.1",
-    "typescript": "^2.6.2"
+    "typescript": "^2.6.2",
+    "validator": "^11.1.0"
   }
 }
