add Token to validation endpoint\

--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "@types/jsonwebtoken": "^8.3.2",
     "@types/mongoose": "^5.5.11",
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "class-validator": "^0.9.1",
     "email-validator": "^2.0.4",
     "express": "^4.16.2",
     "http-errors": "^1.7.1",
     "i": "^0.3.6",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.8",
     "morgan": "^1.9.1",
     "npm": "^6.10.2",
