--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/mongoose": "^5.5.11",
+    "@types/validator": "^10.11.2",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "class-validator": "^0.9.1",
