--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   "license": "ISC",
   "dependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/cors": "^2.8.5",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/mongoose": "^5.5.11",
     "@types/validator": "^10.11.2",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "class-validator": "^0.9.1",
+    "cors": "^2.8.5",
     "email-validator": "^2.0.4",
     "express": "^4.16.2",
     "http-errors": "^1.7.1",
