--- a/package.json
+++ b/package.json
@@ -19,14 +19,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^5.10.1",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.5",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/mongoose": "^5.5.11",
+    "@types/reactstrap": "^8.0.1",
     "@types/validator": "^10.11.2",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.3.1",
     "class-validator": "^0.9.1",
     "cors": "^2.8.5",
     "email-validator": "^2.0.4",
@@ -34,11 +38,16 @@
     "http-errors": "^1.7.1",
     "i": "^0.3.6",
     "jsonwebtoken": "^8.5.1",
+    "mdbreact": "^4.19.0",
     "mongoose": "^5.6.8",
     "morgan": "^1.9.1",
     "npm": "^6.10.2",
     "pug": "^2.0.0-rc.4",
-    "tsc-watch": "^2.2.1"
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "reactstrap": "^8.0.1",
+    "tsc-watch": "^2.2.1",
+    "twilio": "^2.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.11.0",
