--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/cors": "^2.8.5",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/mongoose": "^5.5.11",
+    "@types/react-sidebar": "^3.0.0",
     "@types/reactstrap": "^8.0.1",
     "@types/validator": "^10.11.2",
     "axios": "^0.19.0",
@@ -45,6 +46,7 @@
     "pug": "^2.0.0-rc.4",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-sidebar": "^3.0.2",
     "reactstrap": "^8.0.1",
     "tsc-watch": "^2.2.1",
     "twilio": "^2.1.1"
