--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "tslint": "tslint -c tslint.json -p tsconfig.json",
     "debug": "npm run build && npm run watch-debug",
     "serve-debug": "nodemon --inspect dist/server.js",
-    "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\""
+    "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\"",
+    "client": "cd client && npm start",
+    "server": " npm run watch",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
@@ -59,7 +62,7 @@
     "@types/http-errors": "^1.6.1",
     "@types/morgan": "^1.7.35",
     "@types/node": "^9.4.0",
-    "concurrently": "^3.5.1",
+    "concurrently": "^3.6.1",
     "nodemon": "^1.19.1",
     "tslint": "^5.9.1",
     "typescript": "^2.6.2",
