--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "npm": "^6.10.2",
     "pug": "^2.0.0-rc.4",
     "react": "^16.9.0",
+    "react-burger-menu": "^2.6.11",
     "react-dom": "^16.9.0",
     "react-sidebar": "^3.0.2",
     "reactstrap": "^8.0.1",
