--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/react-sidebar": "^3.0.0",
     "@types/reactstrap": "^8.0.1",
     "@types/validator": "^10.11.2",
+    "alertifyjs": "^1.12.0",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
@@ -52,6 +53,7 @@
     "npm": "^6.10.2",
     "pug": "^2.0.0-rc.4",
     "react": "^16.9.0",
+    "react-alertify-js": "0.0.1",
     "react-burger-menu": "^2.6.11",
     "react-dom": "^16.9.0",
     "react-sidebar": "^3.0.2",
