--- a/package.json
+++ b/package.json
@@ -22,15 +22,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@fortawesome/free-brands-svg-icons": "^5.10.2",
-    "@fortawesome/free-regular-svg-icons": "^5.10.2",
-    "@fortawesome/free-solid-svg-icons": "^5.10.1",
-    "@fortawesome/react-fontawesome": "^0.1.4",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-brands-svg-icons": "^5.11.2",
+    "@fortawesome/free-regular-svg-icons": "^5.11.2",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.6",
     "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.5",
     "@types/jquery": "^3.3.31",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/mongoose": "^5.5.11",
+    "@types/react-alert": "^5.2.0",
     "@types/react-sidebar": "^3.0.0",
     "@types/reactstrap": "^8.0.1",
     "@types/validator": "^10.11.2",
@@ -50,14 +52,18 @@
     "mdbreact": "^4.19.1",
     "mongoose": "^5.6.8",
     "morgan": "^1.9.1",
-    "npm": "^6.10.2",
+    "npm": "^6.12.0",
     "pug": "^2.0.0-rc.4",
     "react": "^16.9.0",
+    "react-alert": "^6.0.0",
+    "react-alert-template-basic": "^1.0.0",
     "react-alertify-js": "0.0.1",
     "react-burger-menu": "^2.6.11",
+    "react-confirm-alert": "^2.4.1",
     "react-dom": "^16.9.0",
     "react-sidebar": "^3.0.2",
     "reactstrap": "^8.0.1",
+    "sweetalert": "^2.1.2",
     "tsc-watch": "^2.2.1",
     "twilio": "^2.1.1",
     "typescript-bootstrap": "^1.0.2"
