--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "mdbreact": "^4.19.1",
     "mongoose": "^5.6.8",
     "morgan": "^1.9.1",
+    "nexmo": "^2.5.1",
     "npm": "^6.12.0",
     "pug": "^2.0.0-rc.4",
     "react": "^16.9.0",
