--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "class-validator": "^0.9.1",
+    "cloudinary": "^1.16.0",
     "cors": "^2.8.5",
     "email-validator": "^2.0.4",
     "express": "^4.16.2",
@@ -52,6 +53,7 @@
     "mdbreact": "^4.19.1",
     "mongoose": "^5.6.8",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
     "nexmo": "^2.5.1",
     "npm": "^6.12.0",
     "pug": "^2.0.0-rc.4",
