--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.6",
+    "@react-pdf/renderer": "^1.6.7",
     "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.5",
     "@types/jquery": "^3.3.31",
