--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@react-pdf/renderer": "^1.6.7",
     "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.5",
+    "@types/google-maps-react": "^2.0.1",
     "@types/jquery": "^3.3.31",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/mongoose": "^5.5.11",
@@ -47,6 +48,7 @@
     "cors": "^2.8.5",
     "email-validator": "^2.0.4",
     "express": "^4.16.2",
+    "google-maps-react": "^2.0.2",
     "http-errors": "^1.7.1",
     "i": "^0.3.6",
     "jquery": "^3.4.1",
