--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "@types/cors": "^2.8.5",
     "@types/google-maps-react": "^2.0.1",
     "@types/jquery": "^3.3.31",
+    "@types/js-cookie": "^2.2.4",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/mongoose": "^5.5.11",
     "@types/react-alert": "^5.2.0",
     "@types/react-sidebar": "^3.0.0",
+    "@types/react-slider": "^0.8.1",
     "@types/reactstrap": "^8.0.1",
     "@types/validator": "^10.11.2",
     "alertifyjs": "^1.12.0",
@@ -45,6 +47,7 @@
     "bootstrap": "^4.3.1",
     "class-validator": "^0.9.1",
     "cloudinary": "^1.16.0",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "email-validator": "^2.0.4",
     "express": "^4.16.2",
@@ -52,6 +55,7 @@
     "http-errors": "^1.7.1",
     "i": "^0.3.6",
     "jquery": "^3.4.1",
+    "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "mdbreact": "^4.19.1",
     "mongoose": "^5.6.8",
@@ -67,7 +71,9 @@
     "react-burger-menu": "^2.6.11",
     "react-confirm-alert": "^2.4.1",
     "react-dom": "^16.9.0",
+    "react-input-slider": "^5.1.3",
     "react-sidebar": "^3.0.2",
+    "react-slider": "^1.0.1",
     "reactstrap": "^8.0.1",
     "sweetalert": "^2.1.2",
     "tsc-watch": "^2.2.1",
