--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple starter template for ExpressJs and TypeScript based on expressjs/generator and TypeScript-Node-Starter",
   "main": "server.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "node app.ts",
     "build": "npm run build-ts && npm run tslint && npm run serve",
     "serve": "node dist/server.js",
     "watch": "nodemon --exec ts-node -- ./src/server.ts",
