--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node app.ts",
     "build": "npm run build-ts && npm run tslint && npm run serve",
-    "serve": "node dist/server.js",
+    "serve": "node dist/ app.ts",
     "watch": "nodemon --exec ts-node -- ./src/server.ts",
     "watch-node": "nodemon dist/server.js",
     "build-ts": "tsc",
