--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node app.ts",
     "build": "npm run build-ts && npm run tslint && npm run serve",
-    "serve": "node dist/ app.ts",
+    "serve": "node dist/ app.js",
     "watch": "nodemon --exec ts-node -- ./src/server.ts",
     "watch-node": "nodemon dist/server.js",
     "build-ts": "tsc",
@@ -18,7 +18,7 @@
     "client": "cd client && npm start",
     "server": " npm run watch",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "cd client && npm install && npm run build"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "",
   "license": "ISC",
