--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "serve": "node dist/ app.js",
     "watch": "nodemon --exec ts-node -- ./src/server.ts",
     "watch-node": "nodemon dist/server.js",
+    "client": "npm start --prefix client",
     "build-ts": "tsc",
     "watch-ts": "tsc -w",
     "tslint": "tslint -c tslint.json -p tsconfig.json",
     "debug": "npm run build && npm run watch-debug",
     "serve-debug": "nodemon --inspect dist/server.js",
     "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\"",
-    "client": "cd client && npm start",
     "server": " npm run watch",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
