--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "express-ts-template",
   "version": "1.0.0",
   "description": "Simple starter template for ExpressJs and TypeScript based on expressjs/generator and TypeScript-Node-Starter",
-  "main": "server.js",
+  "main": "appgit .js",
   "scripts": {
     "start": "node app.ts",
     "build": "npm run build-ts && npm run tslint && npm run serve",
