--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "nexmo": "^2.5.1",
+    "nodemailer": "^6.3.1",
     "npm": "^6.12.0",
     "pug": "^2.0.0-rc.4",
     "react": "^16.9.0",
