--- a/package.json
+++ b/package.json
@@ -76,8 +76,12 @@
     "react-confirm-alert": "^2.4.1",
     "react-dom": "^16.9.0",
     "react-input-slider": "^5.1.3",
+    "react-rating": "^2.0.0",
+    "react-ratings-declarative": "^3.4.1",
     "react-sidebar": "^3.0.2",
     "react-slider": "^1.0.1",
+    "react-star-rating-input": "^8.0.1",
+    "react-star-ratings": "^2.3.0",
     "reactstrap": "^8.0.1",
     "sweetalert": "^2.1.2",
     "tsc-watch": "^2.2.1",
